src/parser.output
Grammaire

    0 $accept: s $end

    1 s: s e FIN_EXPR
    2  | s en FIN_EXPR
    3  | s T_PRINT FIN_EXPR
    4  | %empty

    5 en: T_LET T_ID T_EQUAL e

    6 e: T_NUM
    7  | T_POP e
    8  | T_NEXT e
    9  | e T_PLUS e
   10  | e T_MINUS e
   11  | e T_DIV e
   12  | e T_MULT e
   13  | e T_LEQ e
   14  | e T_LE e
   15  | e T_GEQ e
   16  | e T_GE e
   17  | e T_OR e
   18  | e T_AND e
   19  | T_ID
   20  | e T_EQ e
   21  | T_NOT e
   22  | T_FUN T_ID arg_list
   23  | T_LET T_ID T_EQUAL e T_IN e
   24  | e T_WHERE T_ID T_EQUAL e
   25  | T_IF e T_THEN e T_ELSE e
   26  | '[' list ']'
   27  | e T_PUSH e
   28  | '(' f_arg e ')'
   29  | '(' e ')'

   30 f_arg: e
   31      | f_arg e

   32 arg_list: T_ARROW e
   33         | T_ID arg_list

   34 list: e
   35     | e ',' list
   36     | %empty


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 28 29
')' (41) 28 29
',' (44) 35
'[' (91) 26
']' (93) 26
error (256)
T_NUM (258) 6
T_ID (259) 5 19 22 23 24 33
T_PRINT (260) 3
FIN_EXPR (261) 1 2 3
T_PLUS (262) 9
T_MINUS (263) 10
T_MULT (264) 12
T_DIV (265) 11
T_LEQ (266) 13
T_LE (267) 14
T_GEQ (268) 15
T_GE (269) 16
T_EQ (270) 20
T_OR (271) 17
T_AND (272) 18
T_NOT (273) 21
T_EQUAL (274) 5 23 24
T_IF (275) 25
T_ELSE (276) 25
T_THEN (277) 25
T_FUN (278) 22
T_ARROW (279) 32
T_LET (280) 5 23
T_IN (281) 23
T_WHERE (282) 24
T_NEXT (283) 8
T_POP (284) 7
T_PUSH (285) 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (36)
    à gauche: 0
s (37)
    à gauche: 1 2 3 4, à droite: 0 1 2 3
en (38)
    à gauche: 5, à droite: 2
e (39)
    à gauche: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29, à droite: 1 5 7 8 9 10 11 12 13 14 15 16 17 18
    20 21 23 24 25 27 28 29 30 31 32 34 35
f_arg (40)
    à gauche: 30 31, à droite: 28 31
arg_list (41)
    à gauche: 32 33, à droite: 22 33
list (42)
    à gauche: 34 35 36, à droite: 26 35


État 0

    0 $accept: . s $end

    $défaut  réduction par utilisation de la règle 4 (s)

    s  aller à l'état 1


État 1

    0 $accept: s . $end
    1 s: s . e FIN_EXPR
    2  | s . en FIN_EXPR
    3  | s . T_PRINT FIN_EXPR

    $end     décalage et aller à l'état 2
    T_NUM    décalage et aller à l'état 3
    T_ID     décalage et aller à l'état 4
    T_PRINT  décalage et aller à l'état 5
    T_NOT    décalage et aller à l'état 6
    T_IF     décalage et aller à l'état 7
    T_FUN    décalage et aller à l'état 8
    T_LET    décalage et aller à l'état 9
    T_NEXT   décalage et aller à l'état 10
    T_POP    décalage et aller à l'état 11
    '['      décalage et aller à l'état 12
    '('      décalage et aller à l'état 13

    en  aller à l'état 14
    e   aller à l'état 15


État 2

    0 $accept: s $end .

    $défaut  accepter


État 3

    6 e: T_NUM .

    $défaut  réduction par utilisation de la règle 6 (e)


État 4

   19 e: T_ID .

    $défaut  réduction par utilisation de la règle 19 (e)


État 5

    3 s: s T_PRINT . FIN_EXPR

    FIN_EXPR  décalage et aller à l'état 16


État 6

   21 e: T_NOT . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 18


État 7

   25 e: T_IF . e T_THEN e T_ELSE e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 19


État 8

   22 e: T_FUN . T_ID arg_list

    T_ID  décalage et aller à l'état 20


État 9

    5 en: T_LET . T_ID T_EQUAL e
   23 e: T_LET . T_ID T_EQUAL e T_IN e

    T_ID  décalage et aller à l'état 21


État 10

    8 e: T_NEXT . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 22


État 11

    7 e: T_POP . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 23


État 12

   26 e: '[' . list ']'

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 36 (list)

    e     aller à l'état 24
    list  aller à l'état 25


État 13

   28 e: '(' . f_arg e ')'
   29  | '(' . e ')'

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e      aller à l'état 26
    f_arg  aller à l'état 27


État 14

    2 s: s en . FIN_EXPR

    FIN_EXPR  décalage et aller à l'état 28


État 15

    1 s: s e . FIN_EXPR
    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    FIN_EXPR  décalage et aller à l'état 29
    T_PLUS    décalage et aller à l'état 30
    T_MINUS   décalage et aller à l'état 31
    T_MULT    décalage et aller à l'état 32
    T_DIV     décalage et aller à l'état 33
    T_LEQ     décalage et aller à l'état 34
    T_LE      décalage et aller à l'état 35
    T_GEQ     décalage et aller à l'état 36
    T_GE      décalage et aller à l'état 37
    T_EQ      décalage et aller à l'état 38
    T_OR      décalage et aller à l'état 39
    T_AND     décalage et aller à l'état 40
    T_WHERE   décalage et aller à l'état 41
    T_PUSH    décalage et aller à l'état 42


État 16

    3 s: s T_PRINT FIN_EXPR .

    $défaut  réduction par utilisation de la règle 3 (s)


État 17

   23 e: T_LET . T_ID T_EQUAL e T_IN e

    T_ID  décalage et aller à l'état 43


État 18

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   21  | T_NOT e .
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 21 (e)


État 19

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   25  | T_IF e . T_THEN e T_ELSE e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_LEQ    décalage et aller à l'état 34
    T_LE     décalage et aller à l'état 35
    T_GEQ    décalage et aller à l'état 36
    T_GE     décalage et aller à l'état 37
    T_EQ     décalage et aller à l'état 38
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_THEN   décalage et aller à l'état 44
    T_WHERE  décalage et aller à l'état 41
    T_PUSH   décalage et aller à l'état 42


État 20

   22 e: T_FUN T_ID . arg_list

    T_ID     décalage et aller à l'état 45
    T_ARROW  décalage et aller à l'état 46

    arg_list  aller à l'état 47


État 21

    5 en: T_LET T_ID . T_EQUAL e
   23 e: T_LET T_ID . T_EQUAL e T_IN e

    T_EQUAL  décalage et aller à l'état 48


État 22

    8 e: T_NEXT e .
    9  | e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 8 (e)


État 23

    7 e: T_POP e .
    9  | e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 7 (e)


État 24

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e
   34 list: e .
   35     | e . ',' list

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_LEQ    décalage et aller à l'état 34
    T_LE     décalage et aller à l'état 35
    T_GEQ    décalage et aller à l'état 36
    T_GE     décalage et aller à l'état 37
    T_EQ     décalage et aller à l'état 38
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_WHERE  décalage et aller à l'état 41
    T_PUSH   décalage et aller à l'état 42
    ','      décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 34 (list)


État 25

   26 e: '[' list . ']'

    ']'  décalage et aller à l'état 50


État 26

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e
   29  | '(' e . ')'
   30 f_arg: e .

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_LEQ    décalage et aller à l'état 34
    T_LE     décalage et aller à l'état 35
    T_GEQ    décalage et aller à l'état 36
    T_GE     décalage et aller à l'état 37
    T_EQ     décalage et aller à l'état 38
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_WHERE  décalage et aller à l'état 41
    T_PUSH   décalage et aller à l'état 42
    ')'      décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 30 (f_arg)


État 27

   28 e: '(' f_arg . e ')'
   31 f_arg: f_arg . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 52


État 28

    2 s: s en FIN_EXPR .

    $défaut  réduction par utilisation de la règle 2 (s)


État 29

    1 s: s e FIN_EXPR .

    $défaut  réduction par utilisation de la règle 1 (s)


État 30

    9 e: e T_PLUS . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 53


État 31

   10 e: e T_MINUS . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 54


État 32

   12 e: e T_MULT . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 55


État 33

   11 e: e T_DIV . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 56


État 34

   13 e: e T_LEQ . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 57


État 35

   14 e: e T_LE . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 58


État 36

   15 e: e T_GEQ . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 59


État 37

   16 e: e T_GE . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 60


État 38

   20 e: e T_EQ . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 61


État 39

   17 e: e T_OR . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 62


État 40

   18 e: e T_AND . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 63


État 41

   24 e: e T_WHERE . T_ID T_EQUAL e

    T_ID  décalage et aller à l'état 64


État 42

   27 e: e T_PUSH . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 65


État 43

   23 e: T_LET T_ID . T_EQUAL e T_IN e

    T_EQUAL  décalage et aller à l'état 66


État 44

   25 e: T_IF e T_THEN . e T_ELSE e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 67


État 45

   33 arg_list: T_ID . arg_list

    T_ID     décalage et aller à l'état 45
    T_ARROW  décalage et aller à l'état 46

    arg_list  aller à l'état 68


État 46

   32 arg_list: T_ARROW . e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 69


État 47

   22 e: T_FUN T_ID arg_list .

    $défaut  réduction par utilisation de la règle 22 (e)


État 48

    5 en: T_LET T_ID T_EQUAL . e
   23 e: T_LET T_ID T_EQUAL . e T_IN e

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    e  aller à l'état 70


État 49

   35 list: e ',' . list

    T_NUM   décalage et aller à l'état 3
    T_ID    décalage et aller à l'état 4
    T_NOT   décalage et aller à l'état 6
    T_IF    décalage et aller à l'état 7
    T_FUN   décalage et aller à l'état 8
    T_LET   décalage et aller à l'état 17
    T_NEXT  décalage et aller à l'état 10
    T_POP   décalage et aller à l'état 11
    '['     décalage et aller à l'état 12
    '('     décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 36 (list)

    e     aller à l'état 24
    list  aller à l'état 71


État 50

   26 e: '[' list ']' .

    $défaut  réduction par utilisation de la règle 26 (e)


État 51

   29 e: '(' e ')' .

    $défaut  réduction par utilisation de la règle 29 (e)


État 52

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e
   28  | '(' f_arg e . ')'
   31 f_arg: f_arg e .

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_LEQ    décalage et aller à l'état 34
    T_LE     décalage et aller à l'état 35
    T_GEQ    décalage et aller à l'état 36
    T_GE     décalage et aller à l'état 37
    T_EQ     décalage et aller à l'état 38
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_WHERE  décalage et aller à l'état 41
    T_PUSH   décalage et aller à l'état 42
    ')'      décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 31 (f_arg)


État 53

    9 e: e . T_PLUS e
    9  | e T_PLUS e .
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_MULT  décalage et aller à l'état 32
    T_DIV   décalage et aller à l'état 33
    T_PUSH  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 9 (e)


État 54

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   10  | e T_MINUS e .
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_MULT  décalage et aller à l'état 32
    T_DIV   décalage et aller à l'état 33
    T_PUSH  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 10 (e)


État 55

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   12  | e T_MULT e .
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    $défaut  réduction par utilisation de la règle 12 (e)


État 56

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   11  | e T_DIV e .
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    $défaut  réduction par utilisation de la règle 11 (e)


État 57

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   13  | e T_LEQ e .
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 13 (e)


État 58

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   14  | e T_LE e .
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 14 (e)


État 59

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   15  | e T_GEQ e .
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 15 (e)


État 60

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   16  | e T_GE e .
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 16 (e)


État 61

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   18  | e . T_AND e
   20  | e . T_EQ e
   20  | e T_EQ e .
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_OR     décalage et aller à l'état 39
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 20 (e)


État 62

    9 e: e . T_PLUS e
   10  | e . T_MINUS e
   11  | e . T_DIV e
   12  | e . T_MULT e
   13  | e . T_LEQ e
   14  | e . T_LE e
   15  | e . T_GEQ e
   16  | e . T_GE e
   17  | e . T_OR e
   17  | e T_OR e .
   18  | e . T_AND e
   20  | e . T_EQ e
   24  | e . T_WHERE T_ID T_EQUAL e
   27  | e . T_PUSH e

    T_PLUS   décalage et aller à l'état 30
    T_MINUS  décalage et aller à l'état 31
    T_MULT   décalage et aller à l'état 32
    T_DIV    décalage et aller à l'état 33
    T_AND    décalage et aller à l'état 40
    T_PUSH   décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 17 (e)


État 63
